--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,29 @@
 <resources>
-    <string name="app_name">BingWeather</string>
+    <string name="app_name">必应天气</string>
+
+    <string name="title">标题</string>
+
+    <string name="text_forecast">预报</string>
+    <string name="text_forecast_day">15天趋势预报</string>
+    <string name="text_forecast_hour">24小时预报</string>
+
+    <string name="text_air_quality">空气质量</string>
+    <string name="text_air_quality_detail">空气质量详情</string>
+
+    <string name="text_aqi">AQI 指数</string>
+
+    <string name="text_pm25">PM2.5 指数</string>
+
+    <string name="text_suggestion_go">出行建议</string>
+    <string name="text_suggestion_sport">运动建议</string>
+    <string name="text_suggestion_car">驾车建议</string>
+
+    <string name="test_text">测试</string>
+
+    <string name="et_search_city">搜索城市</string>
+
+    <string name="tv_locate_city">当前定位</string>
+    <string name="tv_locating">正在定位…</string>
+
+    <string name="tv_select_city">选择城市</string>
 </resources>
