--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
 
     <string name="test_text">测试</string>
 
+    <string name="test_refreshed">刚刚更新</string>
+    <string name="test_refresh">正在更新 . . .</string>
+
     <string name="slash">/</string>
 
     <!--************** NOW **************-->
